--- a/index.html
+++ b/index.html
@@ -55,6 +55,40 @@
             <button class="p-3 border border-purple-600 rounded-3xl">Sign up free</button>
         </div>
       </nav>
+
+      <!-- Banner Section -->
+      <section class="bg-[url('./assets/banner.png')] bg-cover py-20 bg-no-repeat">
+        <div class="text-center space-y-5 mt-10">
+            <div class="flex justify-center items-center gap-1">
+                <div class="w-2 h-2 bg-green-500 rounded-full"></div>
+                <p>Top Notch AI Platform</p>
+            </div>
+            <h3 class="text-5xl font-semibold">AI DRIVEN GROWTH FOR <br> PROFESSIONALS & BUSINESSES</h3>
+            <p>Experience the ultimate golfing journey with expert tips, premium gear, <br> and professional insights.</p>
+            <button class="text-white px-5 py-2 bg-purple-900 font-semibold rounded-3xl">Get Start <i class="fa-solid fa-arrow-right"></i></button>
+        </div>
+        <div class="mt-32 w-11/12 mx-auto flex justify-between items-center">
+            <div>
+                <h3 class="text-5xl font-semibold">50+</h3>
+                <p>Year of Experience</p>
+            </div>
+            <div>
+                <h3 class="text-5xl font-semibold">200+</h3>
+                <p>Field in Progress</p>
+            </div>
+            <div>
+                <h3 class="text-5xl font-semibold">120,000+</h3>
+                <p>Farmer Around World</p>
+            </div>
+            <div>
+                <h3 class="text-5xl font-semibold">$15 Billion</h3>
+                <p>Agricultural Product</p>
+            </div>
+        </div>
+      </section>
     </header>
+    <main>
+        
+    </main>
   </body>
 </html>
