added who we are section

--- a/index.html
+++ b/index.html
@@ -40,55 +40,181 @@
           <p class="text-3xl font-bold">Logo</p>
         </div>
         <div>
-          <ul class="flex items-center gap-5 px-3 py-2 bg-purple-100 rounded-3xl">
+          <ul
+            class="flex items-center gap-5 px-3 py-2 bg-purple-100 rounded-3xl"
+          >
             <li class="flex items-center gap-1 p-2 rounded-3xl bg-white">
               <i class="fa-regular fa-house"></i><a href="">Home</a>
             </li>
-            <li class="text-purple-900 font-semibold"><a href="">About Us</a></li>
-            <li class="text-purple-900 font-semibold"><a href="">Reviews</a></li>
-            <li class="text-purple-900 font-semibold"><a href="">Products</a></li>
+            <li class="text-purple-900 font-semibold">
+              <a href="">About Us</a>
+            </li>
+            <li class="text-purple-900 font-semibold">
+              <a href="">Reviews</a>
+            </li>
+            <li class="text-purple-900 font-semibold">
+              <a href="">Products</a>
+            </li>
             <li class="text-purple-900 font-semibold"><a href="">Blog</a></li>
           </ul>
         </div>
         <div class="flex items-center gap-5">
-            <button>Sign in</button>
-            <button class="p-3 border border-purple-600 rounded-3xl">Sign up free</button>
+          <button>Sign in</button>
+          <button class="p-3 border border-purple-600 rounded-3xl">
+            Sign up free
+          </button>
         </div>
       </nav>
 
       <!-- Banner Section -->
-      <section class="bg-[url('./assets/banner.png')] bg-cover py-20 bg-no-repeat">
+      <section
+        class="bg-[url('./assets/banner.png')] bg-cover py-20 bg-no-repeat"
+      >
         <div class="text-center space-y-5 mt-10">
-            <div class="flex justify-center items-center gap-1">
-                <div class="w-2 h-2 bg-green-500 rounded-full"></div>
-                <p>Top Notch AI Platform</p>
-            </div>
-            <h3 class="text-5xl font-semibold">AI DRIVEN GROWTH FOR <br> PROFESSIONALS & BUSINESSES</h3>
-            <p>Experience the ultimate golfing journey with expert tips, premium gear, <br> and professional insights.</p>
-            <button class="text-white px-5 py-2 bg-purple-900 font-semibold rounded-3xl">Get Start <i class="fa-solid fa-arrow-right"></i></button>
+          <div class="flex justify-center items-center gap-1">
+            <div class="w-2 h-2 bg-green-500 rounded-full"></div>
+            <p>Top Notch AI Platform</p>
+          </div>
+          <h3 class="text-5xl font-semibold">
+            AI DRIVEN GROWTH FOR <br />
+            PROFESSIONALS & BUSINESSES
+          </h3>
+          <p>
+            Experience the ultimate golfing journey with expert tips, premium
+            gear, <br />
+            and professional insights.
+          </p>
+          <button
+            class="text-white px-5 py-2 bg-purple-900 font-semibold rounded-3xl"
+          >
+            Get Start <i class="fa-solid fa-arrow-right"></i>
+          </button>
         </div>
         <div class="mt-32 w-11/12 mx-auto flex justify-between items-center">
-            <div>
-                <h3 class="text-5xl font-semibold">50+</h3>
-                <p>Year of Experience</p>
-            </div>
-            <div>
-                <h3 class="text-5xl font-semibold">200+</h3>
-                <p>Field in Progress</p>
-            </div>
-            <div>
-                <h3 class="text-5xl font-semibold">120,000+</h3>
-                <p>Farmer Around World</p>
-            </div>
-            <div>
-                <h3 class="text-5xl font-semibold">$15 Billion</h3>
-                <p>Agricultural Product</p>
-            </div>
+          <div>
+            <h3 class="text-5xl font-semibold">50+</h3>
+            <p>Year of Experience</p>
+          </div>
+          <div>
+            <h3 class="text-5xl font-semibold">200+</h3>
+            <p>Field in Progress</p>
+          </div>
+          <div>
+            <h3 class="text-5xl font-semibold">120,000+</h3>
+            <p>Farmer Around World</p>
+          </div>
+          <div>
+            <h3 class="text-5xl font-semibold">$15 Billion</h3>
+            <p>Agricultural Product</p>
+          </div>
         </div>
       </section>
     </header>
     <main>
-        
+      <section class="w-11/12 mx-auto mt-20">
+        <div class="flex justify-between items-start">
+          <div
+            class="flex gap-2 items-center px-4 py-2 border border-gray-200 rounded-3xl"
+          >
+            <i class="fa-solid fa-layer-group"></i>
+            <p>WHO WE ARE</p>
+          </div>
+          <div>
+            <p class="text-end text-5xl text-gray-500">
+              We are a team of
+              <span class="text-black">AI and automation experts</span> with
+              <br />
+              deep experience in Fortune 500 cybersecurity, <br />
+              <span class="text-black"
+                >compliance, and business transformation.</span
+              >
+              We help <br />
+              <span class="text-black"
+                >SMBs automate processes, scale operations,</span
+              >
+              and <br />
+              remain secure in an AI-driven world.
+            </p>
+          </div>
+        </div>
+        <div class="mt-30 flex justify-between items-center">
+          <div class="space-y-4 flex-1">
+            <h3 class="text-5xl font-bold">
+              Secure AI <br />
+              Implementation
+            </h3>
+            <p class="text-gray-400">
+              AI solutions designed with compliance &amp; <br />
+              security in mind
+            </p>
+            <button
+              class="px-5 py-2 text-purple-600 font-semibold border border-purple-700 rounded-3xl"
+            >
+              Sign up for Free
+            </button>
+          </div>
+          <div class="flex-1">
+            <img src="assets/AI.png" alt="" />
+          </div>
+        </div>
+        <div class="mt-20 flex justify-between items-center">
+          <div class="flex-1">
+            <img src="assets/Rectangle.png" alt="" />
+          </div>
+          <div class="space-y-4 flex-1 ml-10">
+            <h3 class="text-5xl font-bold">
+              Automation for <br />
+              Growth
+            </h3>
+            <p class="text-gray-400">
+              Streamline operations &amp; reduce manual <br />
+              workload
+            </p>
+            <button
+              class="px-5 py-2 text-purple-600 font-semibold border border-purple-700 rounded-3xl"
+            >
+              Sign up for Free
+            </button>
+          </div>
+        </div>
+        <div class="mt-20 flex justify-between items-center">
+          <div class="space-y-4 flex-1">
+            <h3 class="text-5xl font-bold">
+              AI-Powered Decision <br />
+              Making
+            </h3>
+            <p class="text-gray-400">
+             Gain actionable insights and boost efficiency
+            </p>
+            <button
+              class="px-5 py-2 text-purple-600 font-semibold border border-purple-700 rounded-3xl"
+            >
+              Sign up for Free
+            </button>
+          </div>
+          <div class="flex-1">
+            <img src="assets/Rectangle 2.png" alt="" />
+          </div>
+        </div>
+        <div class="mt-20 flex justify-between items-center">
+          <div class="flex-1">
+            <img src="assets/Group.png" alt="" />
+          </div>
+          <div class="space-y-4 flex-1 ml-10">
+            <h3 class="text-5xl font-bold">
+              Tailored for SMBs
+            </h3>
+            <p class="text-gray-400">
+              Scalable AI solutions that fit your business needs
+            </p>
+            <button
+              class="px-5 py-2 text-purple-600 font-semibold border border-purple-700 rounded-3xl"
+            >
+              Sign up for Free
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
