added out best service section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <!-- Navbar Section -->
       <nav class="w-10/12 mx-auto py-5 flex justify-between items-center">
         <div class="flex items-center gap-5">
-          <img class="w-10" src="assets/logo.png" alt="" />
+          <img class="rounded-md" class="w-10" src="assets/logo.png" alt="" />
           <p class="text-3xl font-bold">Logo</p>
         </div>
         <div>
@@ -154,12 +154,12 @@
             </button>
           </div>
           <div class="flex-1">
-            <img src="assets/AI.png" alt="" />
+            <img class="rounded-md" src="assets/AI.png" alt="" />
           </div>
         </div>
         <div class="mt-20 flex justify-between items-center">
           <div class="flex-1">
-            <img src="assets/Rectangle.png" alt="" />
+            <img class="rounded-md" src="assets/Rectangle.png" alt="" />
           </div>
           <div class="space-y-4 flex-1 ml-10">
             <h3 class="text-5xl font-bold">
@@ -184,7 +184,7 @@
               Making
             </h3>
             <p class="text-gray-400">
-             Gain actionable insights and boost efficiency
+              Gain actionable insights and boost efficiency
             </p>
             <button
               class="px-5 py-2 text-purple-600 font-semibold border border-purple-700 rounded-3xl"
@@ -193,17 +193,15 @@
             </button>
           </div>
           <div class="flex-1">
-            <img src="assets/Rectangle 2.png" alt="" />
+            <img class="rounded-md" src="assets/Rectangle 2.png" alt="" />
           </div>
         </div>
         <div class="mt-20 flex justify-between items-center">
           <div class="flex-1">
-            <img src="assets/Group.png" alt="" />
+            <img class="rounded-md" src="assets/Group.png" alt="" />
           </div>
           <div class="space-y-4 flex-1 ml-10">
-            <h3 class="text-5xl font-bold">
-              Tailored for SMBs
-            </h3>
+            <h3 class="text-5xl font-bold">Tailored for SMBs</h3>
             <p class="text-gray-400">
               Scalable AI solutions that fit your business needs
             </p>
@@ -212,6 +210,47 @@
             >
               Sign up for Free
             </button>
+          </div>
+        </div>
+      </section>
+
+      <section class="mt-30 bg-purple-700 text-white py-10">
+        <div class="w-11/12 mx-auto">
+          <div class="flex justify-between items-start">
+            <div
+              class="flex gap-2 items-center px-4 py-2 border border-gray-200 rounded-3xl"
+            >
+              <i class="fa-solid fa-layer-group"></i>
+              <p>Our Best Services</p>
+            </div>
+          </div>
+          <h2 class="text-5xl font-bold mt-10">
+            At the heart of our consulting offerings is our <br />
+            unparalleled Comprehensive Strategic Planning and <br />
+            Development service.
+          </h2>
+          <div class="flex justify-between items-end mt-10">
+            <p class="text-xl font-bold px-20 py-10 bg-purple-600 rounded-lg">
+              AI Strategy & <br />
+              Roadmaps
+            </p>
+            <p class="text-xl font-bold px-20 py-10 bg-purple-600 rounded-lg">
+              AI Workflow <br />
+              Automation
+            </p>
+            <p class="text-xl font-bold px-20 py-10 bg-purple-600 rounded-lg">
+              AI <br />
+              Assessments
+            </p>
+            <p class="text-xl font-bold px-20 py-10 bg-purple-600 rounded-lg">
+              AI Compliance <br />
+              &Security
+            </p>
+            <div class="flex items-center">
+                <i class="fa-solid fa-arrow-left"></i>
+                <p class="font-semibold px-3 py-5 border-6 border-white rounded-full">01/06</p>
+                <i class="fa-solid fa-arrow-right"></i>
+            </div>
           </div>
         </div>
       </section>
