added next gen solution section

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <img class="rounded-md" src="assets/AI.png" alt="" />
           </div>
         </div>
-        <div class="mt-20 flex justify-between items-center">
+        <div class="mt-10 flex justify-between items-center">
           <div class="flex-1">
             <img class="rounded-md" src="assets/Rectangle.png" alt="" />
           </div>
@@ -177,7 +177,7 @@
             </button>
           </div>
         </div>
-        <div class="mt-20 flex justify-between items-center">
+        <div class="mt-10 flex justify-between items-center">
           <div class="space-y-4 flex-1">
             <h3 class="text-5xl font-bold">
               AI-Powered Decision <br />
@@ -196,7 +196,7 @@
             <img class="rounded-md" src="assets/Rectangle 2.png" alt="" />
           </div>
         </div>
-        <div class="mt-20 flex justify-between items-center">
+        <div class="mt-10 flex justify-between items-center">
           <div class="flex-1">
             <img class="rounded-md" src="assets/Group.png" alt="" />
           </div>
@@ -214,7 +214,7 @@
         </div>
       </section>
 
-      <section class="mt-30 bg-purple-700 text-white py-10">
+      <section class="mt-30 bg-purple-700 text-white py-15 rounded-3xl">
         <div class="w-11/12 mx-auto">
           <div class="flex justify-between items-start">
             <div
@@ -247,10 +247,57 @@
               &Security
             </p>
             <div class="flex items-center">
-                <i class="fa-solid fa-arrow-left"></i>
-                <p class="font-semibold px-3 py-5 border-6 border-white rounded-full">01/06</p>
-                <i class="fa-solid fa-arrow-right"></i>
+              <i class="fa-solid fa-arrow-left"></i>
+              <p
+                class="font-semibold px-3 py-5 border-6 border-white rounded-full"
+              >
+                01/06
+              </p>
+              <i class="fa-solid fa-arrow-right"></i>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="w-11/12 mx-auto mt-30">
+        <div class="flex gap-20">
+          <h2 class="text-3xl font-bold flex-1">
+            Next-Gen Solutions for <br />
+            Optimal Business Growth
+          </h2>
+          <p class="text-gray-400 flex-1">
+            In today’s rapidly evolving digital landscape, businesses must adapt
+            to stay competitive. Leveraging next-generation solutions powered by
+            AI, automation, and data-driven insights can unlock new levels of
+            efficiency, innovation, and scalability.
+          </p>
+        </div>
+
+        <div class="flex gap-10 mt-10">
+          <div>
+            <img src="assets/AI-Driven.jpg" alt="" />
+            <h2 class="text-xl font-bold">AI-Driven Analytics</h2>
+            <p class="text-gray-500">
+              Make smarter decisions with real-time data and predictive
+              insights.
+            </p>
+          </div>
+          <div>
+            <img src="assets/Scalable.jpg" alt="" />
+            <h2 class="text-xl font-bold">Scalable Cloud Solutions</h2>
+            <p class="text-gray-500">
+              Ensure seamless growth with flexible, secure, and scalable
+              cloud-based platforms.
+            </p>
+          </div>
+
+          <div>
+            <img src="assets/Customer-Centric.jpg" alt="" />
+            <h2 class="text-xl font-bold">Customer-Centric Strategies</h2>
+            <p class="text-gray-500">
+              nhance user experiences with personalized solutions that drive
+              engagement and loyalty.
+            </p>
           </div>
         </div>
       </section>
