added client say section

--- a/index.html
+++ b/index.html
@@ -301,6 +301,67 @@
           </div>
         </div>
       </section>
+
+      <section class="w-11/12 mx-auto mt-20">
+        <div class="text-center space-y-3">
+          <h1 class="text-4xl font-bold">What Our Clients Say About Us</h1>
+          <p class="max-w-md mx-auto text-gray-500">
+            Discover the impact FutureNav has had on businesses through the
+            words of our satisfied clients.
+          </p>
+        </div>
+
+        <div class="mt-20 flex items-center gap-10">
+          <div class="flex items-center gap-10 flex-1">
+            <div class="flex flex-col gap-3 text-white">
+              <div class="p-2 px-3 bg-purple-600 rounded-full">
+                <i class="fa-solid fa-arrow-up"></i>
+              </div>
+              <div class="p-2 px-3 bg-purple-600 rounded-full">
+                <i class="fa-solid fa-arrow-down"></i>
+              </div>
+            </div>
+            <div class="space-y-5">
+              <div class="relative">
+                <p class="px-5 py-10 bg-purple-200 rounded-lg">
+                  Working with FutureNav was a game-changer for InnovateTech.
+                  Their strategic insights and personalized solutions
+                  revitalized our approach, leading to unprecedented growth. I
+                  highly recommend their services.
+                </p>
+                <div class="text-5xl text-purple-500 absolute -mt-44">
+                  <i class="fa-solid fa-quote-left"></i>
+                </div>
+              </div>
+              <div class="relative">
+                <p class="px-5 py-10 bg-purple-500 rounded-lg">
+                  FutureNav played a crucial role in our technology integration
+                  journey. Their innovative solutions not only streamlined our
+                  processes but also enhanced our competitive edge. We're
+                  grateful for their commitment to excellence.
+                </p>
+                <div class="text-5xl text-purple-900 absolute -mt-44">
+                  <i class="fa-solid fa-quote-left"></i>
+                </div>
+              </div>
+              <div class="relative">
+                <p class="px-5 py-10 bg-purple-200 rounded-lg">
+                  Working with FutureNav was a game-changer for InnovateTech.
+                  Their strategic insights and personalized solutions
+                  revitalized our approach, leading to unprecedented growth. I
+                  highly recommend their services.
+                </p>
+                <div class="text-5xl text-purple-500 absolute -mt-44">
+                  <i class="fa-solid fa-quote-left"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="flex-1">
+            <img src="assets/Group 2.png" alt="" />
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
