added footer section

--- a/index.html
+++ b/index.html
@@ -362,6 +362,79 @@
           </div>
         </div>
       </section>
+
+      <section class="mt-20">
+        <img class="w-full" src="assets/Frame.png" alt="" />
+      </section>
     </main>
+
+    <footer class="pt-20 pb-10 w-11/12 mx-auto">
+      <div class="flex justify-between">
+        <div class="max-w-md">
+          <div class="flex gap-3 items-center">
+            <img class="w-10" src="assets/logo.png" alt="" />
+            <p class="text-xl font-bold">Logo</p>
+          </div>
+          <p class="my-5">
+            These transformative Technologies, Organizations can achieve
+            sustainable growth, improve efficiency, and stay ahead in an
+            ever-changing market.
+          </p>
+          <div class="text-xl flex gap-1">
+            <div class="bg-gray-100 py-3 px-4 rounded-full">
+              <i class="fa-brands fa-facebook"></i>
+            </div>
+            <div class="bg-gray-100 py-3 px-4 rounded-full">
+              <i class="fa-brands fa-twitter"></i>
+            </div>
+            <div class="bg-gray-100 py-3 px-4 rounded-full">
+              <i class="fa-brands fa-instagram"></i>
+            </div>
+            <div class="bg-gray-100 py-3 px-4 rounded-full">
+              <i class="fa-brands fa-linkedin"></i>
+            </div>
+          </div>
+        </div>
+        <div>
+          <ul class="space-y-3">
+            <li class="text-gray-400 font-bold">Company</li>
+            <li>Features</li>
+            <li>Pricing</li>
+            <li>About Us</li>
+            <li>Contact</li>
+          </ul>
+        </div>
+        <div>
+          <ul class="space-y-3">
+            <li class="text-gray-400 font-bold">Resource</li>
+            <li>Blog</li>
+            <li>Customer Stories</li>
+            <li>Information</li>
+            <li>legal</li>
+          </ul>
+        </div>
+        <div>
+          <ul class="space-y-3">
+            <li class="text-gray-400 font-bold">Career</li>
+            <li>Job</li>
+            <li>Hiring</li>
+            <li>News</li>
+            <li>Tips and Tricks</li>
+          </ul>
+        </div>
+        <div>
+          <ul class="space-y-3">
+            <li class="text-gray-400 font-bold">Help</li>
+            <li>FAQ</li>
+            <li>Help Center</li>
+            <li>Support</li>
+          </ul>
+        </div>
+      </div>
+      <div class="mt-10">
+        <hr>
+        <p class="mt-5">© Copyright 2025, All Rights Reserved</p>
+      </div>
+    </footer>
   </body>
 </html>
