correction for deployment

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       <!-- Banner Section -->
       <section
-        class="bg-[url('/assets/banner.png')] bg-cover py-20 bg-no-repeat"
+        class="bg-[url('assets/banner.png')] bg-cover py-20 bg-no-repeat"
       >
         <div class="text-center space-y-5 mt-10">
           <div class="flex justify-center items-center gap-1">
